node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node
  labels:
    app: node
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  # Replace with the IP of your minikube node / master node
  #externalIPs:
  #  - xxx.yyy.zzz.qqq
  selector:
    app: node
    tier: backend
